[package]
name = "discovery-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
bincode = "1"
sha-1 = "0.10"
base64 = "0.13"

[dev-dependencies]
rstest = "0.11.0"
